--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="lib" path="C:/Sandesh/Selenium Downloded/selenium-2.53.1/libs/testng-6.9.9.jar"/>
 	<classpathentry kind="lib" path="C:/Sandesh/Selenium Downloded/selenium-2.53.1/selenium-java-2.53.1.jar"/>
 	<classpathentry kind="lib" path="C:/Sandesh/Selenium Downloded/selenium-2.53.1/selenium-java-2.53.1-srcs.jar"/>
+	<classpathentry kind="lib" path="C:/Users/s.maiya/Downloads/selenium-htmlunit-driver-2.5.0.jar/selenium-htmlunit-driver-2.5.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
